Fixed image not showing issue

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 .header {
-  height: 10rem;
+  height: 5rem;
   display: grid;
   grid-template-columns: 1fr 4fr 1fr;
   background-color: teal;
@@ -30,12 +30,13 @@ body {
 
 .profile {
     columns: 2/3;
-    justify-self: end;
     border: #9c1e1e solid 2px;
 }
 
 img {
-  width: 100%;
-  height: 100%;
-  border: #f9f9f9 solid 2px;
+    margin: 5px 0 0 0;
+    width: 40%;
+    height: 60%;
+    z-index: -1;
+    
 }
